--- a/neo_growth_phase_diagram.html
+++ b/neo_growth_phase_diagram.html
@@ -108,7 +108,7 @@
   .field { display: flex; flex-direction: column; gap: 4px; margin-bottom: 8px; }
   .field label { font-size: 12px; color: var(--muted); display:flex; align-items:center; gap:6px; }
   .field input[type="number"], .field select { background: var(--bg); border: 1px solid var(--line); color: var(--text);
-    border-radius: 6px; padding: 6px 8px; font-size: 13px; }
+    border-radius: 6px; padding: 6px 8px; font-size: 13px; align-self: flex-start; width: 100%; max-width: 260px; }
   .controls { display: flex; gap: 6px; flex-wrap: wrap; align-items:center; }
   .muted { color: var(--muted); font-size: 12px; }
   .row { display:flex; align-items:center; justify-content:space-between; margin: 8px 0 6px; }
