--- a/neo_growth_phase_diagram.html
+++ b/neo_growth_phase_diagram.html
@@ -101,7 +101,7 @@
   .panel { background: linear-gradient(180deg, var(--panel), var(--panel-2)); border: 1px solid var(--line);
     border-radius: 10px; padding: 12px; overflow-y: auto; overflow-x: hidden; }
   #sidebar { overflow-x: auto; overflow-y: auto; }
-  #sidebarInner { min-width: 520px; width: 100%; }
+  #sidebarInner { width: 100%; min-width: min(520px, 100%); }
   .panel h2 { font-size: 14px; margin: 10px 0; color: var(--accent); }
   .grid-2 { display: grid; grid-template-columns: repeat(2, minmax(140px, 1fr)); gap: 8px; }
   .grid-3 { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; }
